manifests/operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: "B4mad Developer Hub"
  name: b4mad-developer-hub
