manifests/operator/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logging-proxy
  labels:
    app: logging-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logging-proxy
  template:
    metadata:
      labels:
        app: logging-proxy
    spec:
      serviceAccountName: proxy-sa
      containers:
      - name: mitmproxy
        image: mitmproxy/mitmproxy:10.1.1
        args: ["mitmdump", "--listen-host", "0.0.0.0", "--listen-port", "8080", "-v"]
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 0
          allowPrivilegeEscalation: true
---
apiVersion: v1
kind: Service
metadata:
  name: logging-proxy
spec:
  selector:
    app: logging-proxy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
