manifests/operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    haproxy.router.openshift.io/timeout: 120s
  name: developer-b4mad-racing
spec:
  ingressClassName: openshift-default
  rules:
    - host: rhdh.b4mad.racing
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: backstage-rhdh
                port:
                  name: http-backend
  tls:
    - hosts:
        - rhdh.b4mad.racing
      secretName: https-cert-rhdh.b4mad.racing
